# CCPY_vibecoding

./: .gitignore  LICENSE  README.md  VALIDATION_REPORT.md  mcp.json  pyproject.toml
benchmarks/: terminalbench_smoke.py
examples/: demo_task_tool.py  multi_agent_system.py
src/claude_code_python/: __init__.py  cli.py  compact.py  config.py  hooks.py  mcp.py  memory.py  messages.py  model.py  permissions.py  providers.py  runner.py  session.py  tasks.py
src/claude_code_python/tools/: __init__.py  base.py  default.py  registry.py
tests/: test_runner_tools.py
