[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "claude-code-python"
version = "0.1.0"
description = "A Python implementation inspired by Claude Code with tools, bash, and parallel Task sub-agents."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Claude-Code-Python Contributors" }]
dependencies = [
  "httpx>=0.27",
  "pydantic>=2.7",
  "typer>=0.12",
  "rich>=13.7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
]
mcp = [
  "mcp>=1.0",
]

[project.scripts]
ccpy = "claude_code_python.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_code_python"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
